--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "angular": "^1.4.0",
     "bootstrap": "^3.2.0",
     "angular-resource": "^1.4.0",
-    "angular-route": "^1.4.0"
+    "angular-route": "^1.4.0",
+    "pusher-angular": "^0.1.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
